--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,9 @@
 DEBUG=1
 SECRET_KEY=django-insecure-5)#vgpw%232^l!9$kkaug2l_(owe-k42#&&$g6-eiibjwhc)1j
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=django_blog_dev
+SQL_USER=django_blog_db_user
+SQL_PASSWORD=django_blog_db_password
+SQL_HOST=db
+SQL_PORT=5432
