--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.3.2
 prompt-toolkit==3.0.20
+psycopg2-binary==2.9.1
 ptyprocess==0.7.0
 pycparser==2.20
 Pygments==2.10.0
