--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,25 @@
 version: '3'
 
 services:
+  nginx:
+    build: ./nginx
+    volumes:
+      - static_volume:/usr/src/app/_static
+      - media_volume:/usr/src/app/_media
+    ports:
+      - 80:80
+    depends_on:
+      - web
+
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     command: gunicorn django_blog.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - ./:/usr/src/app/
-    ports:
-      - 8000:8000
+      - static_volume:/usr/src/app/_static
+      - media_volume:/usr/src/app/_media
+    expose:
+      - 8000
     env_file:
       - ./.env.prod
     depends_on:
@@ -22,3 +33,5 @@ services:
 
 volumes:
   postgres_data:
+  static_volume:
+  media_volume:
